--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,9 @@
 buildscript {
-    ext.kotlin_version = '1.7.10'
+    ext.kotlin_version = '1.8.0'
     repositories {
         google()
         mavenCentral()
+
     }
 
     dependencies {
@@ -15,6 +16,10 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url 'http://download.flutter.io'
+            allowInsecureProtocol = true
+        }
     }
 }
 
